<resources>
    <string name="app_name">Asira</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_main_menu">MainMenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="loading">Mohon tunggu…</string>
    <string name="pin_wrong">PIN salah</string>

    <string name="laoding">Mohon tunggu…</string>
    <string name="connection_bad">Pastikan koneksi internet kamu aktif</string>

    <!--reset passwod page-->
    <string name="rp_desc">Silakan masukkan alamat email yang anda gunakan saat mendaftar menjadi anggota ASIRA</string>
    <string name="rp_emailhintc">contoh: john.doe@agmail.com</string>
    <string name="rp_button">Konfirmasi</string>

    <!--create new passwod page-->
    <string name="cp_desc">Silakan masukkan password baru yang ingin anda buat</string>
    <string name="cp_password">Password Baru</string>
    <string name="cp_retype_pass">Ketik Ulang Password Baru</string>


    <!--Facebook credential-->
    <string name="facebook_app_id">431689680982071</string>
    <string name="fb_login_protocol_scheme">fb431689680982071</string>

    <string name="menu_personalInfo">Informasi pribadi</string>
    <!--<string name="menu_homoeAddress">Alamat rumah</string>-->
    <string name="menu_workInfo">Pekerjaan &amp; Keuangan</string>
    <!--<string name="menu_infoKeuangan">Informasi keuangan</string>-->
    <string name="menu_dataPendukung">Data pendukung</string>
    <string name="menu_logout">Keluar</string>

    <!--page sumber earning-->
    <string name="earning_primary">Pendapatan/Gaji perbulan</string>
    <string name="earning_rp">Rp</string>
    <string name="earning_example_amount">1.250.000</string>
    <string name="earning_secondary">Pendapatan Lain</string>
    <string name="earning_other">Sumber Pendapatan Lain</string>
    <string name="earning_example_other">wirausaha</string>
    <string name="earning_next">Selanjutnya</string>
    <string name="earning_zero">0</string>


    <string name="menu_myaccount">Profil Saya</string>
    <string name="menu_akun_saya">Akun Saya</string>
    <string name="title_activity_verification_otp">VerificationOTPActivity</string>
    <string name="title_activity_rincian_alamat_rumah">RincianAlamatRumahActivity</string>
    <string name="title_activity_info_work_finance">InfoWorkFinanceActivity</string>
    <string name="title_pinjaman_saya">Pinjaman saya</string>
    <string name="title_pengajuan_pinjaman">Data Pengajuan Pinjaman</string>
    <string name="title_pencairan">Data Pencairan</string>
    <string name="title_keluar">Keluar</string>


    <string name="empty_pinjaman_value">Rp -</string>
    <string name="default_currency_amount">Rp 0</string>

    <!--    <string name="disclaimer_paragraph1">Perhitungan ini merupakan alat bantu berupa simulasi.</string>-->
    <!--    <string name="disclaimer_paragraph2">Hasil perhitungan dari simulasi kredit ini tidak dapat digunakan.</string>-->
    <!--    <string name="desc_example">Ini adalah contoh berita dan promo terbaru yang dapat ditampilkan.</string>-->

    <string name="disclaimer_paragraph1">Perhitungan ini merupakan alat bantu berupa simulasi yang digunakan untuk memberikan perkiraan plafond kredit, jumlah dana yang diterima dan angsuran setiap bulannya, dan oleh karena itu tidak mengikat pihak PT. Bank X dan/atau pihak-pihak lainnya atas penggunaan simulasi angsuran kredit ini.</string>
    <string name="disclaimer_paragraph2">Hasil perhitungan dari simulasi kredit ini tidak dapat digunakan sebagai landasan oleh pihak manapun untuk mengajukan complain/keluhan/keberatan/tuntutan hukum, baik kepada Bank X, manajemen dan karyawan/ti-nya apabila terjadi perbedaan hasil perhitungan antara simulasi dengan realisasinya ataupun hal lainnya yang mungkin dapat menimbulkan kerugian secara materiil dan/atau immateriil atas pihak-pihak yang menggunakan simulasi angsuran kredit ini.Hasil perhitungan dari simulasi kredit ini tidak dapat digunakan sebagai landasan oleh pihak manapun untuk mengajukan complain/keluhan/keberatan/tuntutan hukum, baik kepada Bank X, manajemen dan karyawan/ti-nya apabila terjadi perbedaan hasil perhitungan antara simulasi dengan realisasinya ataupun hal lainnya yang mungkin dapat menimbulkan kerugian secara materiil dan/atau immateriil atas pihak-pihak yang menggunakan simulasi angsuran kredit ini.</string>
    <string name="desc_example">Ini adalah contoh berita dan promo terbaru yang dapat ditampilkan kapanpun pada aplikasi untuk membuat pengguna aplikasi semakin tertarik menggunakan.</string>

    <string name="title_activity_history_loan">HistoryLoanActivity</string>
    <string name="title_activity_testing">TestingActivity</string>
    <string name="birthdate_format">dd-mm-yyyy</string>

    <string name="resubmit_loan_alert">Batalkan mengirim ulang pengajuan pinjaman?</string>
    <string name="submit_loan_alert">Batalkan pengajuan pinjaman?</string>
    <string name="otp_regist_alert">Keluar dari halaman OTP?</string>
    <string name="resubmit_regist_alert">Batalkan verifikasi akun Anda?</string>

    <string name="processing">Dalam Proses</string>
    <string name="accept">Diterima</string>
    <string name="reject">Ditolak</string>
    <string name="pending">Tertunda</string>
    <string name="confirm">Terkonfirmasi</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="title_activity_term_condition">TermConditionActivity</string>

    <string name="no_connection">Jaringan internet tidak tersedia</string>
    <string name="error_msg_http">Terjadi kesalahan. Mohon coba beberapa saat lagi</string>
    <string name="error_msg">Mohon coba beberapa saat lagi. Sedang dalam perbaikan</string>

    <string name="borrower_cred_id">androkey</string>
    <string name="borrower_cred_sandi">androsecret</string>
    <string name="lender_cred_id">reactkey</string>
    <string name="lender_cred_sandi">reactsecret</string>

    <string name="pp_link">Dengan menekan tombol daftar, maka Anda menyetujui seluruh kebijakan Asira</string>
    <string name="disclaimer_select_bank">Silahkan pilih bank dan lengkapi data diri untuk mulai mengajukan pinjaman!</string>

    <string name="agent_term_condition_login">Dengan menekan tombol masuk, maka anda menyetujui seluruh kebijakan Asira</string>
    <string name="wajib_isi"> (Wajib isi)</string>
    <string name="address">Noble House, Lantai 30\n+6221 501018 86 - 87\nJalan Dr.Ide Anak Agung Gde Agung Kav. E 4.2, RT.5/RW.2, Kuningan\nJakarta Selatan, Daerah Khusus Ibukota Jakarta 12950</string>
    <string name="tnc">1. Layanan Pinjam Meminjam Berbasis Teknologi Informasi merupakan kesepakatan perdata antara Pemberi Pinjaman dengan Penerima Pinjaman, sehingga segala risiko yang timbul dari kesepakatan tersebut ditanggung sepenuhnya oleh masing-masing pihak.\n\n2. Risiko kredit atau gagal bayar ditanggung sepenuhnya oleh Pemberi Pinjaman. Tidak ada lembaga atau otoritas negara yang bertanggung jawab atas risiko gagal bayar ini.\n\n3. Penyelenggara dengan persetujuan dari masing-masing Pengguna (Pemberi Pinjaman dan/atau Penerima Pinjaman) mengakses, memperoleh, menyimpan, mengelola dan/atau menggunakan data pribadi Pengguna (“Pemanfaatan Data”) pada atau di dalam benda, perangkat elektronik (termasuk smartphone atau telepon seluler), perangkat keras (hardware) maupun lunak (software), dokumen elektronik, aplikasi atau sistem elektronik milik Pengguna atau yang dikuasai Pengguna, dengan memberitahukan tujuan, Batasan dan mekanisme Pemanfaatan Data tersebut kepada Pengguna atau yang dikuasai Pengguna, dengan memberitahukan tujuan, Batasan dan mekanisme Pemanfaatan Data tersebut kepada Pengguna yang bersangkutan sebelum memperoleh persetujuan yang dimaksud.\n\n4. Pemberi Pinjaman yang belum memiliki pengetahuan dan pengalaman pinjam meminjam, disarankan untuk tidak menggunakan layanan ini.\n\n5. Pengguna harus membaca dan memahami informasi ini sebelum membuat keputusan menjadi Pemberi Pinjaman atau Penerima Pinjaman.\n\n6. Pemerintah yaitu dalam hal ini Otoritas Jasa Keuangan, tidak bertanggung jawab atas setiap pelanggaran atau ketidakpatuhan oleh Pengguna, baik Pemberi Pinjaman maupun Penerima Pinjaman (baik karena kesengajaan atau kelalaian Pengguna) terhadap ketentuan peraturan perundang-undangan maupun kesepakatan atau perikatan antara Penyelenggara dengan Pemberi Pinjaman dan/atau Penerima Pinjaman.\n\n7. Data yang disimpan adalah data identitas dari pihak peminjam beserta data yang diperlukan sesuai kebutuhan pihak Pemberi Pinjaman sebagai syarat pinjaman yang disepakati oleh kedua belah pihak\n\n8. Asira membutuhkan perizinan Anda untuk akses kamera, mikrofon dan lokasi guna kebutuhan mengambil gambar yang dibutuhkan sebagai syarat administrasi peminjaman, data Anda akan disimpan sebaik-baiknya dan tidak akan digunakan selain keperluan aplikasi Asira dan mitra.</string>

</resources>
