<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:shoawIn="navigation_view">

    <item android:title="@string/menu_myaccount">

        <menu>
            <group android:checkableBehavior="single">

                <item
                    android:id="@+id/nav_akun_saya"
                    android:icon="@drawable/ic_informasi_pribadi"
                    android:title="@string/menu_akun_saya"/>
                <item
                    android:id="@+id/pengajuan_pinjaman"
                    android:icon="@drawable/ic_loan_history"
                    android:title="@string/title_pengajuan_pinjaman" />
                <item
                    android:id="@+id/nav_datapencairan"
                    android:icon="@drawable/ic_informasi_keuangan"
                    android:title="@string/title_pencairan" />
                <item
                    android:id="@+id/nav_logout"
                    android:icon="@drawable/ic_power"
                    android:title="@string/title_keluar" />

            </group>

        </menu>

    </item>

</menu>
