<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/graybackground"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:padding="@dimen/_17sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="4dp"
            app:cardCornerRadius="4dp">

            <LinearLayout
                android:orientation="vertical"
                android:background="@android:color/white"
                android:padding="@dimen/_16sdp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Produk"
                        android:textColor="@color/colorAsiraText"
                        android:textSize="@dimen/fontNormal" />

                    <TextView
                        android:id="@+id/selectedProduct"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        tools:text="Product A"
                        android:textSize="@dimen/fontNormal"
                        android:fontFamily="@font/manrope_bold"
                        android:textColor="@color/colorAsiraText"
                        android:textAlignment="textEnd"/>

                </LinearLayout>

                <LinearLayout
                    android:weightSum="2"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:text="Pengajuan Peminjaman"
                        android:layout_weight="1"
                        android:textColor="@color/colorAsiraText"
                        android:textSize="@dimen/fontNormal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/pinjaman"
                        android:textSize="@dimen/fontNormal"
                        android:fontFamily="@font/manrope_bold"
                        android:textColor="@color/colorAsiraAccent"
                        android:text="@string/default_currency_amount"
                        android:layout_weight="1"
                        android:textAlignment="textEnd"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <LinearLayout
                    android:weightSum="2"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:text="Tenor Peminjaman"
                        android:layout_weight="1"
                        android:textColor="@color/colorAsiraText"
                        android:textSize="@dimen/fontNormal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/tenor"
                        android:textSize="@dimen/fontNormal"
                        android:fontFamily="@font/manrope_bold"
                        android:textColor="@color/colorAsiraAccent"
                        android:layout_weight="1"
                        android:textAlignment="textEnd"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            app:cardCornerRadius="4dp"
            app:cardElevation="4dp">

            <LinearLayout
                android:padding="@dimen/_16sdp"
                android:orientation="vertical"
                android:background="@android:color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:weightSum="2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:text="Bunga"
                        android:layout_weight="1"
                        android:textColor="@color/colorAsiraText"
                        android:textSize="@dimen/fontNormal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/bunga"
                        android:text="@string/default_currency_amount"
                        android:layout_weight="1"
                        android:textAlignment="textEnd"
                        android:textColor="@color/colorAsiraText"
                        android:fontFamily="@font/manrope_bold"
                        android:textSize="@dimen/fontNormal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </LinearLayout>


                <LinearLayout
                    android:weightSum="2"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:text="Biaya Admin"
                        android:layout_weight="1"
                        android:textColor="@color/colorAsiraText"
                        android:textSize="@dimen/fontNormal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/biayaAdmin"
                        android:text="@string/default_currency_amount"
                        android:layout_weight="1"
                        android:textAlignment="textEnd"
                        android:textColor="@color/colorAsiraText"
                        android:fontFamily="@font/manrope_bold"
                        android:textSize="@dimen/fontNormal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <LinearLayout
                    android:weightSum="2"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:text="Jumlah Pencairan"
                        android:layout_weight="1"
                        android:textColor="@color/colorAsiraText"
                        android:textSize="@dimen/fontNormal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/jumlahPencairan"
                        android:text="@string/default_currency_amount"
                        android:layout_weight="1"
                        android:textAlignment="textEnd"
                        android:textColor="@color/colorAsiraAccent"
                        android:fontFamily="@font/manrope_bold"
                        android:textSize="@dimen/fontNormal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </LinearLayout>


                <LinearLayout
                    android:weightSum="2"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:text="Angsuran per Bulan"
                        android:layout_weight="1"
                        android:textColor="@color/colorAsiraText"
                        android:textSize="@dimen/fontNormal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/angsuranBulanan"
                        android:text="@string/default_currency_amount"
                        android:layout_weight="1"
                        android:textAlignment="textEnd"
                        android:textColor="@color/colorAsiraAccent"
                        android:fontFamily="@font/manrope_bold"
                        android:textSize="@dimen/fontNormal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </LinearLayout>


                <!--<LinearLayout-->
                <!--android:weightSum="2"-->
                <!--android:layout_marginBottom="5dp"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content">-->

                <!--<TextView-->
                <!--android:text="Saldo poko pinjaman"-->
                <!--android:layout_weight="1"-->
                <!--android:textColor="@android:color/black"-->
                <!--android:textSize="@dimen/fontNormal"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content" />-->

                <!--<TextView-->
                <!--android:id="@+id/saldoPokokPinjaman"-->
                <!--android:text="@string/default_currency_amount"-->
                <!--android:layout_weight="1"-->
                <!--android:textColor="@android:color/black"-->
                <!--android:textStyle="bold"-->
                <!--android:textAlignment="textEnd"-->
                <!--android:textSize="@dimen/fontNormal"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content" />-->

                <!--</LinearLayout>-->

                <LinearLayout
                    android:weightSum="2"
                    android:visibility="gone"
                    android:layout_marginBottom="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:text="Estimasi Jatuh tempo"
                        android:layout_weight="1"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/fontNormal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/jatuhTempo"
                        android:text="5 Desember 2019"
                        android:layout_weight="1"
                        android:textColor="@android:color/black"
                        android:textStyle="bold"
                        android:textAlignment="textEnd"
                        android:textSize="@dimen/fontNormal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            app:cardElevation="4dp"
            app:cardCornerRadius="4dp">

            <LinearLayout
                android:orientation="vertical"
                android:padding="@dimen/_16sdp"
                android:background="@android:color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="Alasan Mengajukan Peminjaman:"
                    android:textColor="@color/colorAsiraText"
                    android:textSize="@dimen/fontNormal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/alasan"
                    android:textColor="@color/colorAsiraText"
                    android:fontFamily="@font/manrope_bold"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:textSize="@dimen/fontNormal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />


                <TextView
                    android:text="Detail Tujuan Pinjaman:"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:textColor="@color/colorAsiraText"
                    android:textSize="@dimen/fontNormal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/tujuanPinjam"
                    android:textColor="@color/colorAsiraText"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:fontFamily="@font/manrope_bold"
                    android:textSize="@dimen/fontNormal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            app:cardElevation="4dp"
            app:cardCornerRadius="4dp">

            <LinearLayout
                android:orientation="vertical"
                android:padding="@dimen/_16sdp"
                android:background="@android:color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="Syarat dan Ketentuan"
                    android:layout_weight="1"
                    android:textColor="@color/colorAsiraText"
                    android:textSize="@dimen/fontNormal"
                    android:fontFamily="@font/manrope_bold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <ScrollView
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/border_disclaimer"
                    android:layout_width="match_parent"
                    android:layout_height="175dp">

                    <LinearLayout
                        android:orientation="vertical"
                        android:padding="@dimen/margin10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:text="@string/disclaimer_paragraph1"
                            android:textSize="@dimen/fontNormal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:text="@string/disclaimer_paragraph2"
                            android:layout_marginTop="5dp"
                            android:textSize="@dimen/fontNormal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                    </LinearLayout>

                </ScrollView>

                <CheckBox
                    android:id="@+id/checkDisclaimer"
                    android:text="Ya, saya setuju"
                    android:fontFamily="@font/manrope_bold"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:textSize="@dimen/fontNormal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonSubmit"
            android:backgroundTint="@color/colorAsiraAccent"
            android:text="Kirim"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


    </LinearLayout>

</ScrollView>